--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ayang</groupId>
+  
   <artifactId>helloworld</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  
   <name>helloworld Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.2.RELEASE</version>
+</parent>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,8 +22,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
   </dependencies>
+  
   <build>
-    <finalName>helloworld</finalName>
+    <plugins>
+    	<plugin>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-maven-plugin</artifactId>
+    	</plugin>
+    </plugins>
   </build>
 </project>
